--- a/ReactJS/InstaPaw/instapaw/src/App.css
+++ b/ReactJS/InstaPaw/instapaw/src/App.css
@@ -1,68 +1,87 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Spectral:wght@700&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
-  color:#333
 }
 
-img,button,input {
+body {
+  padding-top: 4rem;
+  margin: 0px;
+  color: #333;
+  --type-first: Helvetica, Arial, sans-serif;
+  --type-second: 'Spectral', Georgia;
+  font-family: var(--type-first);
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0px;
+}
+
+ul,
+li {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+img {
   display: block;
-}
-
-.img {
   max-width: 100%;
 }
 
-
-button, input {
+button,
+input {
+  display: block;
   font-size: 1rem;
-  color:#333;
-}
-
-ul li {
-  list-style: none;
-}
-
-.container {
-  max-width: 800px;
-  padding: 0 1em;
+  font-family: var(--type-first);
+  color: #333;
 }
 
 a {
   text-decoration: none;
-  color:#333
+  color: #333;
 }
-main {
-  margin-top: 150px;
+
+.container {
+  max-width: 50rem;
+  padding: 0 1rem;
+  margin: 0 auto;
 }
+
+.mainContainer {
+  margin-top: 4rem;
+}
+
 .title {
-  font-size: 3rem;
+  font-family: var(--type-second);
   line-height: 1;
-  margin: 1em 0;
+  font-size: 3rem;
+  margin: 1rem 0;
   position: relative;
   z-index: 1;
 }
 
 .title::after {
-  content: "";
+  content: '';
   display: block;
-  width: .5em;
-  height: .5em;
-  background-color: #fb1;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #fb1;
   position: absolute;
-  bottom: -3px;
-  left: -3px;
-  border-radius: 15%;
+  bottom: 5px;
+  left: -5px;
+  border-radius: 0.2rem;
   z-index: -1;
 }
+
 .animeLeft {
   opacity: 0;
   transform: translateX(-20px);
-  animation: animeLeft .3s forwards
+  animation: animeLeft 0.3s forwards;
 }
 
 @keyframes animeLeft {
