--- a/ReactJS/InstaPaw/instapaw/src/Components/Login/Login.module.css
+++ b/ReactJS/InstaPaw/instapaw/src/Components/Login/Login.module.css
@@ -1,34 +1,30 @@
 .login {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    min-height: 100vh;
-    gap: 3em;
-  
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  min-height: 100vh;
+  gap: 2rem;
 }
 
 .login::before {
-    content: "";
-    display: block;
-    background: url(../Assets/login.jpg) no-repeat center center;
-    background-size: cover;
-
+  display: block;
+  content: '';
+  background: url('../../Assets/login.jpg') no-repeat center center;
+  background-size: cover;
 }
 
 .forms {
-   max-width: 1500px;
-    padding: 1em;
-    margin: auto 0;
- 
+  max-width: 30rem;
+  padding: 1rem;
 }
 
-@media (max-width:640px) {
-    .login {
-        grid-template-columns: 1fr;
-    }
-    .login::before {
-        display: none;
-    }
-    .forms {
-        max-width: 100%;
-    }
+@media (max-width: 40rem) {
+  .login {
+    grid-template-columns: 1fr;
+  }
+  .login::before {
+    display: none;
+  }
+  .forms {
+    max-width: 100%;
+  }
 }
