--- a/ReactJS/InstaPaw/instapaw/src/Components/Login/LoginForm.module.css
+++ b/ReactJS/InstaPaw/instapaw/src/Components/Login/LoginForm.module.css
@@ -1,40 +1,42 @@
 .form {
-    margin-bottom: 2em;
+  margin-bottom: 2rem;
 }
 
-.lost {
-    display: inline-block;
-    color:#666;
-    padding: .5em 0;
-    line-height: 1;
+.perdeu {
+  display: inline-block;
+  color: #666;
+  padding: 0.5rem 0;
+  line-height: 1;
 }
 
-.lost::after {
-    content: "";
-    width: 100%;
-    height: 1px;
-    display: block;
-    background-color: #666;
+.perdeu::after {
+  content: '';
+  height: 2px;
+  width: 100%;
+  background: currentColor;
+  display: block;
 }
 
 .cadastro {
-    margin-top: 2em;
+  margin-top: 4rem;
 }
 
 .cadastro p {
-    margin-top: 2em;
-    margin-bottom: 1em;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .subtitle {
-    font-size: 2rem;
+  font-family: var(--type-second);
+  line-height: 1;
+  font-size: 2rem;
 }
 
 .subtitle::after {
-    content: "";
-    display: block;
-    background-color: #ddd;
-    height: 0.3em;
-    width: 2em;
-    border-radius: 0.2em;
+  content: '';
+  display: block;
+  background: #ddd;
+  height: 0.5rem;
+  width: 3rem;
+  border-radius: 0.2rem;
 }
