--- a/ReactJS/InstaPaw/instapaw/src/Components/PhotoContent/PhotoContent.module.css
+++ b/ReactJS/InstaPaw/instapaw/src/Components/PhotoContent/PhotoContent.module.css
@@ -19,6 +19,22 @@
     }
   }
   
+  .single .details {
+    padding: 1rem 0px 0px 0px;
+  }
+
+  .single.photo {
+    grid-template-columns: 1fr;
+    height: auto;
+  }
+
+  .single .img {
+    grid-row: 1;
+    border-radius: 0.4rem;
+    overflow: hidden;
+  }
+  
+
   .details {
     padding: 2rem 2rem 0 2rem;
   }
